<resources>
    <string name="app_name">Herbarium</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="login">Enter login</string>
    <string name="password">Enter password</string>
    <string name="logInButton">Enter!</string>
    <string name="forget_password">Forger password?</string>

    <string name="titleRegistration">Registration</string>
    <string name="createLogin">Enter login</string>
    <string name="createPassword">Enter password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="enterEmail">Enter e-mail</string>
    <string name="nameSurname">Name and Surname</string>
    <string name="loginRegistration">Login</string>
    <string name="confidentiality">I agree with the privacy policy.</string>
    <string name="go">Done!</string>

    <string name="menuTittle">Menu</string>
    <string name="menuHistory">History</string>
    <string name="catchLeaves">Simple leaf form</string>
    <string name="shareToFriends">Share to friends</string>
    <string name="title_activity_history">History</string>

    <string name="title_activity_venation">VenationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="findVenation">Leaf venation</string>
</resources>
