<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.shand.herbarium.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp">
        >

        <requestFocus />
        <EditText
            android:id="@+id/editTextUserName"
            android:hint="@string/createLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <requestFocus />
        </EditText>
        <EditText
            android:id="@+id/user_email"
            android:hint="@string/enterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createPassword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confidentiality"
            android:id="@+id/checkBox"
            android:layout_gravity="center_horizontal" />


        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:layout_marginBottom="60dp" />

    </LinearLayout>
</RelativeLayout>
